// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReducerAssign invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerAssign -> ReducerObject[a] -> ReducerFunction[throwError]
with the following input:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`ReducerAssign invalid input type 2`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerAssign -> ReducerObject[b] -> ReducerFunction[throwError]
with the following input:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`ReducerFilter invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFilter
with the following input:
false",
  ],
]
`;

exports[`ReducerFilter throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFilter[0] -> ReducerFunction
with the following input:
1",
  ],
]
`;

exports[`ReducerFilter throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFilter[1] -> ReducerFunction
with the following input:
2",
  ],
]
`;

exports[`ReducerFind invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFind
with the following input:
false",
  ],
]
`;

exports[`ReducerFind throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFind[0] -> ReducerFunction
with the following input:
1",
  ],
]
`;

exports[`ReducerFind throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFind[1] -> ReducerFunction
with the following input:
2",
  ],
]
`;

exports[`ReducerFunction with async error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFunction
with the following input:
\\"input\\"",
  ],
]
`;

exports[`ReducerFunction with sync error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFunction[throwError]
with the following input:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors first item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFunction[throwError]
with the following input:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors second item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerList[1] -> ReducerFunction[throwError]
with the following input:
\\"input\\"",
  ],
]
`;

exports[`ReducerList with errors third item has error 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerList[2] -> ReducerFunction
with the following input:
undefined",
  ],
]
`;

exports[`ReducerMap invalid input type 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerMap
with the following input:
false",
  ],
]
`;

exports[`ReducerMap throw error on first item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerMap[0] -> ReducerFunction
with the following input:
1",
  ],
]
`;

exports[`ReducerMap throw error on second item 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerMap[1] -> ReducerFunction
with the following input:
2",
  ],
]
`;

exports[`ReducerObject with errors nested property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerObject[b.c.d] -> ReducerFunction[throwError]
with the following input:
{
  \\"a\\": 1,
  \\"b\\": {
    \\"c\\": {
      \\"d\\": 1
    }
  }
}",
  ],
]
`;

exports[`ReducerObject with errors single property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerObject[b] -> ReducerFunction[throwError]
with the following input:
{
  \\"a\\": 1,
  \\"b\\": 2
}",
  ],
]
`;

exports[`do not log names for anonymous functions function in ReducerList 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFunction
with the following input:
{}",
  ],
]
`;

exports[`do not log names for anonymous functions function with inferred name from object property 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerObject[a] -> ReducerFunction
with the following input:
{
  \\"a\\": 1
}",
  ],
]
`;

exports[`do not log names for anonymous functions function with inferred name from variable 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerFunction
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces control:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 control:1 -> select[case] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces control:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 control:2 -> select[case] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces control:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 control:3 -> select[0][do] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces control:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 control:4 -> select[1][do] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces control:5 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 control:5 -> select[2][default] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:1[before] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:2[value] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:3[after] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerEntity
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:type-check-1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:type-check-1[inputType] -> ReducerFunction[isString]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:type-check-2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:type-check-2[outputType] -> ReducerFunction[isString]
with the following input:
500",
  ],
]
`;

exports[`reducer stack traces entry:type-check-3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:type-check-3[inputType] -> schema:a.1.0[value]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces entry:type-check-4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 entry:type-check-4[inputType] -> schema:a.1.0[value]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces model:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 model:1[before] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces model:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 model:2[value] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces model:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 model:3[after] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces model:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 ReducerEntity
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces request:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 request:1[value] -> ReducerList[1] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces request:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 request:2[beforeRequest] -> ReducerList[1] -> ReducerFunction[throwError]
with the following input:
{
  \\"method\\": \\"GET\\",
  \\"json\\": true,
  \\"url\\": \\"http://remote.test\\"
}",
  ],
]
`;

exports[`reducer stack traces request:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 request:3[options][y:] -> ReducerList[1] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces request:4 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 request:4[before] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces request:5 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 request:5[after] -> ReducerFunction[throwError]
with the following input:
{
  \\"ok\\": true
}",
  ],
]
`;

exports[`reducer stack traces schema:a.1.0 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 schema:a.1.0[value]
with the following input:
{
  \\"foo\\": 1,
  \\"baaaaaar\\": \\"1\\"
}",
  ],
]
`;

exports[`reducer stack traces schema:with-value-prop 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 schema:with-value-prop[value] -> ReducerFunction[throwError]
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces transform:1 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 transform:1 -> ReducerFunction
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces transform:2 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 transform:2 -> transform:1 -> ReducerFunction
with the following input:
{}",
  ],
]
`;

exports[`reducer stack traces transform:3 1`] = `
Array [
  Array [
    "The following reducer failed to execute:
 transform:3 -> transform:2 -> transform:1 -> ReducerFunction
with the following input:
{}",
  ],
]
`;
